Images fix, font fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="healthcare-img-wrap">
-                            <div class="healthcare-img"></div>
+                            <img src="./images/healthcare.png" class="healthcare-img">
                         </div>
                     </div>
             </header>
@@ -45,7 +45,8 @@
                             <div class="main-services">Our services</div>
                             <div class="underline"></div>
                             <div class="main-description">We provide to you the best choices for you. Adjust it to your health needs and make sure your undergo treatment
-                                <br> with our highly qualified doctors you can consult with us which type of service is suitable for your health</div>
+                                <br> with our highly qualified doctors you can consult with us which type of service is suitable for your health
+                            </div>
                         </div>
                     </div>
                     <img src="images/drip.svg" class="drip">
@@ -127,7 +128,7 @@
                     <button class="learn-btn">Learn more</button>
                     <div class="main-upper-mid container">
                         <div class="upper-mid-img">
-                            <img class="leading-img" src="https://s3-alpha-sig.figma.com/img/5a71/8938/cbd96e01169ecaccfe108988c59eb3ce?Expires=1613347200&Signature=FsSVSIPBZG42vkPUyojBx95aVT92k9zffc0ORA7YBXU7pCKwN2FPdeiGeTZezrfBWfhXUjFQw9xLjTVAGliQJMoxGeIAJGpTpjv1nON6ycM4geLZJ5nOw4YYZ-STHOHuxo0u7FXPuZ3iZBh6hPJGk2waVc~h3QC-xx4E9kPicLGaXq~YWl2fR7GpKUSKs~h2iWx2mHCGRLiinHdQkc9d1cRad4D6CxtlXvOxVqUsOxVLWS4nU9kowOJzMe1gjZ1ZgZoSW6O0MmdOMO67vbFxjPmup7nF8SceToUeIOuktBUt-d54q8ua6LGBzgWJKe97Y-n~5-PcYFuNWnlUW5lsXw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+                            <img class="leading-img" src="./images/leading-img.png" alt="">
                         </div>
                         <div class="upper-mid-rightside">
                             <h1 class="upper-mid-h1">Leading healthcare <br>
@@ -159,7 +160,7 @@
                             </button>
                         </div>
                         <div class="main-mid-pg-img">
-                            <img src="https://s3-alpha-sig.figma.com/img/f370/b729/22ff86b81b4aac7e4f14c92d90b7f0f4?Expires=1613347200&Signature=AvbEXunT3XNw1Sr~DsBQBNoCHoToE4-3BM05cavq1h~xt1Jinqw7HHA~yE89Ngh35JBi8mh5FrgTRy79WfG6YPXB0BnE6KCctI3dZzjG4kme9vI-kpEIv4gauyGC0J55McKrgy4R4KN7lytCzbNFNGPT5Yrj~AkHvL5kEBN~V-9kSPVFcBwiHYlV36TTPZ8K3whDJzK3UKFzjxafl1qFenlW4UKu2-mB94mMRAZvBShn1J~guGVYM5MMxPp1tkBt7fagfMYRTwA7m9phmQtz31gRYDqnCPR5c-eHlcdkm5OTUTRdyo-oajVQNXh64RxF5FcgHDkWILA1IvVUA6PQ-w__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="">
+                            <img src="./images/main-mid-pg-img.png" alt="">
                         </div>
                     </div>
                     <div class="comment-tablet container">
